--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 #changeButton{
     position:absolute;
-    top: 25%;
+    top: 20%;
     left: 45vw;
     padding: 10px;
     font-weight: 700;
@@ -17,7 +17,18 @@
 #changeButton1{
     position:absolute;
     top: 75%;
-    left: 45vw;
+    left: 20vw;
+    padding: 10px;
+    font-weight: 700;
+    color: white;
+    background-color: blue;
+    border: none;
+    border-radius: 5px;
+}
+#changeButton2{
+    position:absolute;
+    top: 50%;
+    left: 20vw;
     padding: 10px;
     font-weight: 700;
     color: white;
@@ -28,9 +39,20 @@
 #firstHalf{
     height: 50vh;
     width: 100%;
+    background-color: aliceblue;
 }
 
 #secondHalf{
     height: 50vh;
-    width: 100%;
+    width: 50vw;
+    background-color: bisque;
+}
+#thirdHalf{
+    position: absolute;
+    top: 50vh;
+    left: 50vw;
+    height: 50vh;
+    width: 50%;
+    background-color:cadetblue;
+ 
 }
